--- a/app/views/home/main.html
+++ b/app/views/home/main.html
@@ -177,5 +177,15 @@
         <span style="font-size:10pt;color:#555">|</span>
         <a href="/privacy" style="font-size:10pt;color:#555">Privacy Policy</a>
       </div>
+
+      <form action="/charge" method="POST">
+        <script
+            src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+            data-key="pk_test_odiB2gb7RPRukTHJOG2XPV1s"
+            data-name="Pronto Associates Ltd"
+            data-description="Register your Card With Us"
+            data-locale="auto">
+        </script>
+      </form>
     </body>
 </html>
