--- a/app/views/creatives/_bg_primary.html.erb
+++ b/app/views/creatives/_bg_primary.html.erb
@@ -1,11 +1,11 @@
-<section class="bg-primary" id="about">
+<section class="bg-primary" id="howitworks">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">We've got what you need!</h2>
                 <hr class="light">
-                <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                <a href="#" class="btn btn-default btn-xl">Get Started!</a>
+                <p class="text-faded">We have trained operators standing by 24/7 to answer every one of your requests. Send us a text message, and we'll get you what you want. We'll order what you need from the appropriate service (e.g. DoorDash, Instacart, Postmates, etc.), and deal with them so you just automatically get what you want, like InstantOrder...</p>
+                <!-- <a href="#" class="btn btn-default btn-xl">Get Started!</a> -->
             </div>
         </div>
     </div>
