--- a/app/views/creatives/_services.html.erb
+++ b/app/views/creatives/_services.html.erb
@@ -1,4 +1,4 @@
-<section id="services">
+<section id="commmitment">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -12,29 +12,29 @@
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                    <h3>Sturdy Templates</h3>
-                    <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                    <h3>Unlimited</h3>
+                    <p class="text-muted">Order anything you want. As long as it's not illegal. Seriously. Just try it.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h3>Ready to Ship</h3>
-                    <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                    <h3>Fast</h3>
+                    <p class="text-muted">We use the fastest delivery channel to deliver your product</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Up to Date</h3>
-                    <p class="text-muted">We update dependencies to keep things fresh.</p>
+                    <h3>Secure</h3>
+                    <p class="text-muted">We will send you a 128-bit encrypted HTTPS link via SMS that you can click to enter your credit card number. We do not store your credit card number. All payment processing is handled by Stripe</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>Made with Love</h3>
-                    <p class="text-muted">You have to make your websites with love these days!</p>
+                    <h3>Transparent</h3>
+                    <p class="text-muted">It's completely free to chat with InstantOrder. When you order something, we'll let you know the total price so you can confirm it before you are billed. There are no hidden fees, and tip is included.</p>
                 </div>
             </div>
         </div>
