--- a/app/views/creatives/index.html.erb
+++ b/app/views/creatives/index.html.erb
@@ -2,7 +2,7 @@
 <%= render 'header' %>
 <%= render 'bg_primary' %>
 <%= render 'services' %>
-<%= render 'portfolio' %>
-<%= render 'call_to_action' %>
+<%= render 'example' %>
 <%= render 'contact' %>
+<%= render 'footer' %>
 
