changed footer and reduced space with contact section

--- a/app/assets/stylesheets/creative/creative.css.scss
+++ b/app/assets/stylesheets/creative/creative.css.scss
@@ -505,6 +505,15 @@ body {
     margin-right: auto;
 }
 
-.footer {
-    padding-bottom:20px;
+#contact{
+  margin-top:80px;
+  padding-bottom:20px;
 }
+
+.footer {
+  padding-top:20px;
+  padding-bottom:20px;
+  background-color: #f5f5f5;
+}
+
+
