--- a/app/views/creatives/_contact.html.erb
+++ b/app/views/creatives/_contact.html.erb
@@ -1,4 +1,4 @@
-<section id="contact">
+<div id="contact">
     <div class="container text-center">
         <div class="call-to-action">
             <h2 class="section-heading">Ready to start your next order with us?</h2>
@@ -7,5 +7,5 @@
             <h2 style="color: #f05f40;">Text 12345678</h2>
         </div>
     </div>
-</section>
-
+</div>
+<br>
