fix mobile field

--- a/app/views/creatives/_header.html.erb
+++ b/app/views/creatives/_header.html.erb
@@ -6,15 +6,15 @@
             <h1 style="color: #f05f40;">12345678</h1>
             <h4>Send an SMS to this number to get started</h4>
             <hr>
-            <%= form_tag accounts_path, method: :post do %>
-			        <%= text_field_tag :mobile_phone, nil, placeholder: 'Mobile Phone Number' %>
+            <%= form_tag accounts_path, method: :post, class: 'navbar-form' do %>
+			        <%= text_field_tag :mobile_phone, nil, placeholder: 'Mobile Phone Number', class: 'form-control'  %>
+			        <br><br>
 			        <script
 			          src="https://checkout.stripe.com/checkout.js" class="stripe-button"
 			          data-key="pk_test_odiB2gb7RPRukTHJOG2XPV1s"
 			          data-label="Register with Us"
-			          data-panel-label="Register"
-			          data-name="Pronto Associates Ltd"
-			          data-description="2 widgets"
+			          data-panel-label="Create An Account"
+			          data-name="Instant Order"
 			          data-allow-remember-me="false"
 			          data-locale="auto">
 			        </script>
