adapted content and icons

--- a/app/views/creatives/_bg_primary.html.erb
+++ b/app/views/creatives/_bg_primary.html.erb
@@ -2,10 +2,33 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">We've got what you need!</h2>
+                <h2 class="section-heading">How it works?</h2>
                 <hr class="light">
-                <p class="text-faded">We have trained operators standing by 24/7 to answer every one of your requests. Send us a text message, and we'll get you what you want. We'll order what you need from the appropriate service (e.g. DoorDash, Instacart, Postmates, etc.), and deal with them so you just automatically get what you want, like InstantOrder...</p>
                 <!-- <a href="#" class="btn btn-default btn-xl">Get Started!</a> -->
+            </div>
+            <div class="col-lg-3 col-md-6 text-center">
+                <div class="service-box">
+                    <i class="fa fa-4x fa-play-circle wow bounceIn"></i>
+                    <h3>On-demand Support</h3>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 text-center">
+                <div class="service-box">
+                    <i class="fa fa-4x fa-clock-o wow bounceIn" data-wow-delay=".1s"></i>
+                    <h3>Transparent Hourly Rates</h3>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 text-center">
+                <div class="service-box">
+                    <i class="fa fa-4x fa-comment wow bounceIn" data-wow-delay=".2s"></i>
+                    <h3>Dedicated Account Manager</h3>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 text-center">
+                <div class="service-box">
+                    <i class="fa fa-4x fa-users wow bounceIn" data-wow-delay=".3s"></i>
+                    <h3>Skilful Tech Experts</h3>
+                </div>
             </div>
         </div>
     </div>
