--- a/app/views/creatives/_header.html.erb
+++ b/app/views/creatives/_header.html.erb
@@ -1,10 +1,12 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h2>ORDER BY TEXT - FROM 8AM UNTIL MIDNIGHT 7/7</h2>
-            <p></p>
+            <h2>END-TO-END OFFICE SUPPORT</h2>
+            <br>
             <h1 style="color: #f05f40;">12345678</h1>
+            <br>
             <h4>Send an SMS to this number to get started</h4>
+            <h4>Available on demand during weekdays from 8AM until 8PM</h4>
             <hr>
             <%= form_tag accounts_path, method: :post, class: 'navbar-form' do %>
 			        <%= text_field_tag :mobile_phone, nil, placeholder: 'Mobile Phone Number', class: 'form-control'  %>
