--- a/app/views/creatives/_services.html.erb
+++ b/app/views/creatives/_services.html.erb
@@ -1,8 +1,8 @@
-<section id="commmitment">
+<section id="services">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">At Your Service</h2>
+                <h2 class="section-heading">End-to-End</h2>
                 <hr class="primary">
             </div>
         </div>
@@ -11,30 +11,30 @@
         <div class="row">
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                    <h3>Unlimited</h3>
-                    <p class="text-muted">Order anything you want. As long as it's not illegal. Seriously. Just try it.</p>
+                    <i class="fa fa-4x fa-power-off wow bounceIn text-primary"></i>
+                    <h3>IT Support</h3>
+                    <p class="text-muted">WiFi network management, computer troubleshooting, A/V and conference room setup</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h3>Fast</h3>
-                    <p class="text-muted">We use the fastest delivery channel to deliver your product</p>
+                    <i class="fa fa-4x fa-wrench wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                    <h3>Handyman Services</h3>
+                    <p class="text-muted">Anything requiring tools, cabling, or paint</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Secure</h3>
-                    <p class="text-muted">We will send you a 128-bit encrypted HTTPS link via SMS that you can click to enter your credit card number. We do not store your credit card number. All payment processing is handled by Stripe</p>
+                    <i class="fa fa-4x fa-check-square-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                    <h3>Corporate Tasks</h3>
+                    <p class="text-muted">Simple assembly or anything that benefits from a helping hand</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>Transparent</h3>
-                    <p class="text-muted">It's completely free to chat with InstantOrder. When you order something, we'll let you know the total price so you can confirm it before you are billed. There are no hidden fees, and tip is included.</p>
+                    <i class="fa fa-4x fa-magic wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                    <h3>Office Cleaning</h3>
+                    <p class="text-muted">Regularly scheduled cleaning needs and stocking supply</p>
                 </div>
             </div>
         </div>
