--- a/app/views/creatives/_navbar.html.erb
+++ b/app/views/creatives/_navbar.html.erb
@@ -18,7 +18,7 @@
                     <a class="page-scroll" href="#howitworks">How it works</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#commmitment">Our commmitment</a>
+                    <a class="page-scroll" href="#services">Our services</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#examples">Examples</a>
