--- a/app/views/creatives/_footer.html.erb
+++ b/app/views/creatives/_footer.html.erb
@@ -6,7 +6,8 @@
        <!-- <a href="/jobs" style="font-size:10pt;color:#555">Work With Us</a> -->
         <!-- | -->
         <a href="mailto:support@instantorder.co" style="font-size:10pt;color:#555">Support </a>
-         <!-- | <a href="mailto:press@instantorder.co" style="font-size:10pt;color:#555">Press Contact</a> -->
+        |
+        <!-- <a href="mailto:press@instantorder.co" style="font-size:10pt;color:#555">Press Contact</a> -->
         <span style="font-size:10pt;color:#555">|</span>
         <a href="/terms" style="font-size:10pt;color:#555">Terms of Use</a>
         <span style="font-size:10pt;color:#555">|</span>
