--- a/app/views/creatives/_bg_primary.html.erb
+++ b/app/views/creatives/_bg_primary.html.erb
@@ -8,7 +8,7 @@
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-play-circle wow bounceIn"></i>
+                    <i class="fa fa-4x fa-power-off wow bounceIn"></i>
                     <h3>On-demand Support</h3>
                 </div>
             </div>
