--- a/app/views/creatives/_services.html.erb
+++ b/app/views/creatives/_services.html.erb
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-power-off wow bounceIn text-primary"></i>
+                    <i class="fa fa-4x fa-desktop wow bounceIn text-primary"></i>
                     <h3>IT Support</h3>
                     <p class="text-muted">WiFi network management, computer troubleshooting, A/V and conference room setup</p>
                 </div>
@@ -19,21 +19,21 @@
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-wrench wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h3>Handyman Services</h3>
-                    <p class="text-muted">Anything requiring tools, cabling, or paint</p>
+                    <h3>Handyman Assistance</h3>
+                    <p class="text-muted">Any work requiring tools, cabling, or paint</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-check-square-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Corporate Tasks</h3>
+                    <h3>Office Tasks</h3>
                     <p class="text-muted">Simple assembly or anything that benefits from a helping hand</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-magic wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>Office Cleaning</h3>
+                    <h3>Corporate Cleaning</h3>
                     <p class="text-muted">Regularly scheduled cleaning needs and stocking supply</p>
                 </div>
             </div>
