--- a/app/views/creatives/_services.html.erb
+++ b/app/views/creatives/_services.html.erb
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">End-to-End</h2>
+                <h2 class="section-heading">The Full suite</h2>
                 <hr class="primary">
             </div>
         </div>
