--- a/app/views/creatives/_services.html.erb
+++ b/app/views/creatives/_services.html.erb
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">The Full suite</h2>
+                <h2 class="section-heading">Full Suite</h2>
                 <hr class="primary">
             </div>
         </div>
@@ -12,7 +12,7 @@
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-desktop wow bounceIn text-primary"></i>
-                    <h3>IT Support</h3>
+                    <h3>Tech Support</h3>
                     <p class="text-muted">WiFi network management, computer troubleshooting, A/V and conference room setup</p>
                 </div>
             </div>
