--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -1,20 +1,30 @@
-<%= form_for @account, url: {action: 'create'}, class: 'navbar-form' do |f| %>
-  <%= f.text_field :first_name, placeholder: 'First Name'  %>
-  <br>
-  <%= f.text_field :email, placeholder: 'Email'  %>
-  <br>
-  <%= f.text_field :company, placeholder: 'Company'  %>
-  <br>
-  <%= f.text_field :mobile_phone, placeholder: 'Mobile Phone Number'  %>
-  <br><br>
-  <p>Your Card Details:</p>
-  <script
-    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-    data-key="pk_test_odiB2gb7RPRukTHJOG2XPV1s"
-    data-label="Add"
-    data-panel-label="Create Account"
-    data-name="Instant Order"
-    data-allow-remember-me="false"
-    data-locale="auto">
-  </script>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4 col-md-offset-4">
+      <%= form_for @account, url: {action: 'create'} do |f| %>
+        <div class="form-group">
+          <%= f.text_field :first_name, placeholder: 'First Name', class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <%= f.text_field :email, placeholder: 'Email', class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <%= f.text_field :company, placeholder: 'Company', class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <%= f.text_field :mobile_phone, placeholder: 'Mobile Phone Number', class: 'form-control' %>
+        </div>
+        <p>Your Card Details:</p>
+        <script
+          src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+          data-key="pk_test_odiB2gb7RPRukTHJOG2XPV1s"
+          data-label="Add"
+          data-panel-label="Create Account"
+          data-name="Instant Order"
+          data-allow-remember-me="false"
+          data-locale="auto">
+        </script>
+      <% end %>
+    </div>
+  </div>
+</div>
