--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -6,7 +6,7 @@
           <%= f.text_field :first_name, placeholder: 'First Name', class: 'form-control' %>
         </div>
         <div class="form-group">
-          <%= f.text_field :email, placeholder: 'Email', class: 'form-control' %>
+          <%= f.text_field :last_name, placeholder: 'Last Name', class: 'form-control' %>
         </div>
         <div class="form-group">
           <%= f.text_field :company, placeholder: 'Company', class: 'form-control' %>
