navbar and footer

--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -1,3 +1,5 @@
+<%= render 'creatives/navbar' %>
+
 <div class="container">
   <div class="row">
     <h3 style="text-align: center;">Register my details</h1>
@@ -30,3 +32,4 @@
   </div>
 </div>
 
+<%= render 'creatives/footer' %>
