improved the registration form

--- a/app/assets/stylesheets/creative/creative.css.scss
+++ b/app/assets/stylesheets/creative/creative.css.scss
@@ -493,7 +493,7 @@ body {
     webkit-tap-highlight-color: #222;
 }
 
-/*InstantOrder*/
+/*InstantOrder Carousel*/
 .carousel-control.left, .carousel-control.right {
     background-image: none
 }
@@ -520,5 +520,14 @@ body {
   padding-bottom:20px;
   background-color: #f5f5f5;
 }
+
+/*InstantOrder Register*/
+.registration_form{
+    background-color: white;
+    border:2px solid #f05f40;
+}
+
+
+
 
 
