--- a/app/views/creatives/_example.html.erb
+++ b/app/views/creatives/_example.html.erb
@@ -12,18 +12,18 @@
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner" role="listbox">
                     <div class="item active">
-                        <div class="col-lg-10 col-lg-offset-1 col-sm-12">
-                            <div class="col-lg-4 col-sm-6">
+                        <div class="col-lg-10 col-lg-offset-1 col-sm-12 col-xs-12">
+                            <div class="col-lg-4 col-md-4 col-sm-6">
                                 <a href="#">
                                 <%= image_tag "creative/portfolio/7.png", class: "img-responsive screenshot", alt: "" %>
                                 </a>
                             </div>
-                            <div class="col-lg-4 col-sm-6">
+                            <div class="col-lg-4 col-md-4 col-sm-6 hidden-xs">
                                 <a href="#">
                                     <%= image_tag "creative/portfolio/7.png", class: " img-responsive screenshot", alt: "" %>
                                 </a>
                             </div>
-                            <div class="col-lg-4 col-sm-6">
+                            <div class="col-lg-4 col-md-4 col-sm-6 hidden-xs">
                                 <a href="#">
                                     <%= image_tag "creative/portfolio/7.png", class: "img-responsive screenshot", alt: "" %>
                                 </a>
@@ -33,17 +33,17 @@
 
                     <div class="item">
                         <div class="col-lg-10 col-lg-offset-1 col-sm-12">
-                            <div class="col-lg-4 col-sm-6">
+                            <div class="col-lg-4 col-md-4 col-sm-6">
                                 <a href="#">
                                 <%= image_tag "creative/portfolio/7.png", class: "img-responsive screenshot", alt: "" %>
                                 </a>
                             </div>
-                            <div class="col-lg-4 col-sm-6">
+                            <div class="col-lg-4 col-md-4 col-sm-6 hidden-xs">
                                 <a href="#">
                                 <%= image_tag "creative/portfolio/7.png", class: "img-responsive screenshot", alt: "" %>
                                 </a>
                             </div>
-                            <div class="col-lg-4 col-sm-6">
+                            <div class="col-lg-4 col-md-4 col-sm-6 hidden-xs">
                                 <a href="#">
                                 <%= image_tag "creative/portfolio/7.png", class: "img-responsive screenshot", alt: "" %>
                                 </a>
