--- a/app/views/creatives/_header.html.erb
+++ b/app/views/creatives/_header.html.erb
@@ -1,14 +1,16 @@
 <header id="page-top">
     <div class="header-content">
-        <div class="header-content-inner">
-            <h2>ON DEMAND OFFICE SUPPORT</h2>
-            <br>
-            <h1 style="color: #f05f40;">12345678</h1>
-            <br>
-            <h4>Send an SMS to this number to get started</h4>
-            <h4>Available during weekdays from 8AM until 8PM</h4>
-            <hr>
-            <%= link_to 'REGISTER MY DETAILS', new_account_path, class: "btn btn-primary btn-xl page-scroll" %>
+        <div class"container-fluid">
+            <div class="header-content-inner">
+                <h2>ON DEMAND OFFICE SUPPORT</h2>
+                <br>
+                <h1 style="color: #f05f40;">12345678</h1>
+                <br>
+                <h4>Send an SMS to this number to get started</h4>
+                <h4>Available during weekdays from 8AM until 8PM</h4>
+                <hr>
+                <%= link_to 'REGISTER MY DETAILS', new_account_path, class: "btn btn-primary btn-xl page-scroll" %>
+            </div>
         </div>
     </div>
 </header>
