--- a/app/views/layouts/creative.html.erb
+++ b/app/views/layouts/creative.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>InstantOrder</title>
+  <%= display_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <%= stylesheet_link_tag 'creative/manifest.css', media: 'all' %>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
