--- a/app/views/accounts/_header.html.erb
+++ b/app/views/accounts/_header.html.erb
@@ -25,7 +25,7 @@
                         data-key="pk_test_odiB2gb7RPRukTHJOG2XPV1s"
                         data-label="Add Payment Details"
                         data-panel-label="Create Account"
-                        data-name="Instant Order"
+                        data-name="Instela"
                         data-allow-remember-me="false"
                         data-locale="auto">
                       </script>
