--- a/app/views/creatives/_footer.html.erb
+++ b/app/views/creatives/_footer.html.erb
@@ -1,16 +1,12 @@
 <footer class="footer">
     <div class="container-fluid text-center">
-        InstantOrder is a service provided by Pronto Associates Ltd, located in London, UK.<br><br>
-       <a href="mailto:hello@instantorder.co" style="font-size:10pt;color:#555">Contact Us</a>
-       <span style="font-size:10pt;color:#555">|</span>
-       <!-- <a href="/jobs" style="font-size:10pt;color:#555">Work With Us</a> -->
-        <!-- | -->
-        <a href="mailto:support@instantorder.co" style="font-size:10pt;color:#555">Support </a>
-       <!--  | -->
-        <!-- <a href="mailto:press@instantorder.co" style="font-size:10pt;color:#555">Press Contact</a> -->
-        <span style="font-size:10pt;color:#555">|</span>
-        <a href="/terms" style="font-size:10pt;color:#555">Terms of Use</a>
-        <span style="font-size:10pt;color:#555">|</span>
-        <a href="/privacy" style="font-size:10pt;color:#555">Privacy Policy</a>
+      Instela is a service provided by Instela Ltd, located in London, UK.<br><br>
+      <a href="mailto:hello@instela.co" style="font-size:10pt;color:#555">Contact Us</a>
+      <span style="font-size:10pt;color:#555">|</span>
+      <a href="mailto:support@instela.co" style="font-size:10pt;color:#555">Support </a>
+      <span style="font-size:10pt;color:#555">|</span>
+      <a href="/terms" style="font-size:10pt;color:#555">Terms of Use</a>
+      <span style="font-size:10pt;color:#555">|</span>
+      <a href="/privacy" style="font-size:10pt;color:#555">Privacy Policy</a>
     </div>
 </footer>
