--- a/app/views/creatives/_navbar.html.erb
+++ b/app/views/creatives/_navbar.html.erb
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">InstantOrder</a>
+            <a class="navbar-brand page-scroll" href="#page-top">Instela</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
