--- a/app/views/layouts/accounts.html.erb
+++ b/app/views/layouts/accounts.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>InstantOrder</title>
+  <!-- <title>InstantOrder</title> -->
   <%= display_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <%= stylesheet_link_tag 'creative/manifest.css', media: 'all' %>
