removed unecessary images, added screenshots and number clickable

--- a/app/views/creatives/_example.html.erb
+++ b/app/views/creatives/_example.html.erb
@@ -15,17 +15,17 @@
                         <div class="col-lg-10 col-lg-offset-1 col-sm-12 col-xs-12">
                             <div class="col-lg-4 col-md-4 col-sm-6">
                                 <a href="#">
-                                <%= image_tag "creative/portfolio/7.png", class: "img-responsive screenshot", alt: "" %>
+                                <%= image_tag "creative/portfolio/tech_chat.png", class: "img-responsive screenshot", alt: "" %>
                                 </a>
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-6 hidden-xs">
                                 <a href="#">
-                                    <%= image_tag "creative/portfolio/7.png", class: " img-responsive screenshot", alt: "" %>
+                                    <%= image_tag "creative/portfolio/hand_chat.png", class: " img-responsive screenshot", alt: "" %>
                                 </a>
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-6 hidden-xs">
                                 <a href="#">
-                                    <%= image_tag "creative/portfolio/7.png", class: "img-responsive screenshot", alt: "" %>
+                                    <%= image_tag "creative/portfolio/task_chat.png", class: "img-responsive screenshot", alt: "" %>
                                 </a>
                             </div>
                         </div>
@@ -35,17 +35,17 @@
                         <div class="col-lg-10 col-lg-offset-1 col-sm-12">
                             <div class="col-lg-4 col-md-4 col-sm-6">
                                 <a href="#">
-                                <%= image_tag "creative/portfolio/7.png", class: "img-responsive screenshot", alt: "" %>
+                                <%= image_tag "creative/portfolio/hand_chat.png", class: "img-responsive screenshot", alt: "" %>
                                 </a>
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-6 hidden-xs">
                                 <a href="#">
-                                <%= image_tag "creative/portfolio/7.png", class: "img-responsive screenshot", alt: "" %>
+                                <%= image_tag "creative/portfolio/tech_chat.png", class: "img-responsive screenshot", alt: "" %>
                                 </a>
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-6 hidden-xs">
                                 <a href="#">
-                                <%= image_tag "creative/portfolio/7.png", class: "img-responsive screenshot", alt: "" %>
+                                <%= image_tag "creative/portfolio/task_chat.png", class: "img-responsive screenshot", alt: "" %>
                                 </a>
                             </div>
                         </div>
