--- a/app/assets/stylesheets/creative/creative.css.scss
+++ b/app/assets/stylesheets/creative/creative.css.scss
@@ -191,7 +191,7 @@ header {
     min-height: auto;
     text-align: center;
     color: #fff;
-    background-image: asset-data-url("creative/header5.jpg");
+    background-image: asset-data-url("creative/header.jpg");
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
