--- a/app/views/creatives/_contact.html.erb
+++ b/app/views/creatives/_contact.html.erb
@@ -4,7 +4,7 @@
             <h2 class="section-heading">Any help needed?</h2>
             <hr class="primary">
             <p>Send us a text and we will get back to you as soon as possible!</p>
-            <h2 style="color: #f05f40;">07 45 45 74 821</h2>
+            <h2 style="color: #f05f40;"><a style="text-decoration: none;" href="sms:07454574821">07 45 45 74 821</a></h2>
         </div>
     </div>
 </div>
