--- a/app/views/creatives/_header.html.erb
+++ b/app/views/creatives/_header.html.erb
@@ -4,7 +4,7 @@
             <div class="header-content-inner">
                 <h2>ON DEMAND OFFICE SUPPORT</h2>
                 <br>
-                <h1 style="color: #f05f40;">07 45 45 74 821</h1>
+                <h1 style="color: #f05f40;"><a style="text-decoration: none;" href="sms:07454574821">07 45 45 74 821</a></h1>
                 <br>
                 <h4>Send an SMS to this number to get started</h4>
                 <h4>Available during weekdays from 8AM until 8PM</h4>
