--- a/app/views/creatives/_contact.html.erb
+++ b/app/views/creatives/_contact.html.erb
@@ -1,7 +1,7 @@
 <div id="contact">
     <div class="container text-center">
         <div class="call-to-action">
-            <h2 class="section-heading">Any help needed?</h2>
+            <h2 class="section-heading">How May We Help?</h2>
             <hr class="primary">
             <p>Send us a text and we will get back to you as soon as possible!</p>
             <h2 style="color: #f05f40;"><a style="text-decoration: none;" href="sms:07454574821">07 45 45 74 821</a></h2>
