terms of use mobile responsive

--- a/app/views/accounts/_header.html.erb
+++ b/app/views/accounts/_header.html.erb
@@ -33,13 +33,13 @@
                   <br>
                   <div class="row">
                     <div class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4  col-sm-4 col-sm-offset-4 col-xs-4 col-xs-offset-4">
-                    <a href="https://stripe.com/about"><img class="img-responsive" src="http://static1.squarespace.com/static/516c1d38e4b0e454d77848a3/54c90c35e4b07dcbf973a91e/54c90c6ae4b02ed0cc540b7f/1422462100339/Stripe.png"></a>
+                    <a href="/pages/terms"><img class="img-responsive" src="http://static1.squarespace.com/static/516c1d38e4b0e454d77848a3/54c90c35e4b07dcbf973a91e/54c90c6ae4b02ed0cc540b7f/1422462100339/Stripe.png"></a>
                     </div>
                   </div>
                   <br>
                   <p style="text-align: center; color: black; font-family: 'ArialRoundedMTBold'";>
                   <!-- <input type="checkbox" required name="terms"> -->
-                  By clicking on 'Add Payment Details':<br> I agree that I read and accepted the <br><a href="https://google.com">Terms and Conditions</a></p>
+                  By clicking on 'Add Payment Details':<br> I agree that I read and accepted the <br><a href="/pages/terms">Terms and Conditions</a></p>
                   <!-- <p><input type="submit"></p> -->
                 <% end %>
             </div>
