--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -267,7 +267,7 @@
 
 		<h3>General Conditions</h3>
 
-		<p>Any notice to be given by the User under these Terms may be delivered by email to help@instela.com or by post to Instela’s registered office.</p>
+		<p>Any notice to be given by the User under these Terms may be delivered by email to help@instela.co or by post to Instela’s registered office.</p>
 
 		<br>
 		<br>
