--- a/app/views/creatives/_footer.html.erb
+++ b/app/views/creatives/_footer.html.erb
@@ -5,8 +5,8 @@
       <span style="font-size:10pt;color:#555">|</span>
       <a href="mailto:support@instela.co" style="font-size:10pt;color:#555">Support </a>
       <span style="font-size:10pt;color:#555">|</span>
-      <a href="pages/terms" style="font-size:10pt;color:#555">Terms of Use</a>
+      <a href="/pages/terms" style="font-size:10pt;color:#555">Terms of Use</a>
       <span style="font-size:10pt;color:#555">|</span>
-      <a href="pages/privacy" style="font-size:10pt;color:#555">Privacy Policy</a>
+      <a href="/pages/privacy" style="font-size:10pt;color:#555">Privacy Policy</a>
     </div>
 </footer>
