--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -13,41 +13,7 @@
 
 <body>
 
-<nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand page-scroll" href="/#page-top">Instela</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <a class="page-scroll" href="/#howitworks">How it works</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="/#services">Our services</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="/#examples">Examples</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="/#contact">Contact</a>
-                </li>
-            </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container-fluid -->
-</nav>
-
+<%= render 'accounts/navbar' %>
 
 <div class="container">
 		<br>
