--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -1,15 +1,61 @@
-<%= render 'accounts/navbar' %>
+<!DOCTYPE html>
+<html>
+<head>
+  <!-- <title>InstantOrder</title> -->
+  <%= display_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <%= stylesheet_link_tag 'creative/manifest.css', media: 'all' %>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+  <%= javascript_include_tag 'creative/manifest.js' %>
+  <%= csrf_meta_tags %>
+</head>
 
+<body>
+
+<nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand page-scroll" href="/#page-top">Instela</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a class="page-scroll" href="/#howitworks">How it works</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="/#services">Our services</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="/#examples">Examples</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="/#contact">Contact</a>
+                </li>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+</nav>
 
 <div class="container">
-
-	<br>
+		<br>
 		<br>
 		<br>
 		<h2>Privacy Policy</h2>
 		<br>
 
-	<h2>What’s the point of this policy?</h2>
+	<h3>What’s the point of this policy?</h3>
 	      <ol class="legal-list">
 	        <li>
 	          This policy tells you how we deal with any personal data we collect from you, that you provide to us or that we receive from third parties. Please read it carefully to understand our views and practices regarding your personal data and how we will treat it.
@@ -220,7 +266,7 @@
 	      </ol>
 
 	    <!-- 11 -->
-	      <h2>How can you access your personal data?</h2>
+	      <h3>How can you access your personal data?</h3>
 	      <ol class="legal-list">
 	        <li>
 	          The Act gives you the right to access your personal data held by us. Your right of access can be exercised in accordance with the Act. We may charge an administration fee of £10 to meet our costs in providing you with details of the information we hold about you.
@@ -245,7 +291,11 @@
 	  </ol>
 
 
-	  <hr/>
+	  <br/>
 	  <br/>
 </div>
+
 <%= render 'creatives/footer' %>
+
+</body>
+</html>
