--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,17 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-  <!-- <title>Instela</title> -->
-	<%= display_meta_tags %>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <!-- <title>InstantOrder</title> -->
+  <%= display_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <%= stylesheet_link_tag 'creative/manifest.css', media: 'all' %>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+  <%= javascript_include_tag 'creative/manifest.js' %>
   <%= csrf_meta_tags %>
 </head>
+
 <body>
 
 <%= yield %>
