--- a/app/views/layouts/creative.html.erb
+++ b/app/views/layouts/creative.html.erb
@@ -18,3 +18,21 @@
 </body>
 </html>
 
+<%- if false %>
+
+	<!DOCTYPE html>
+	<html>
+	<head>
+		<%= display_meta_tags %>
+	  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+	  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	  <%= csrf_meta_tags %>
+	</head>
+	<body>
+
+	<%= yield %>
+
+	</body>
+	</html>
+
+<% end %>
