--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -48,7 +48,7 @@
 
     <p>These Terms and Conditions contain information about Instela, the service we provide to you and the agreement we have between us. Please read them carefully. We may change them from time to time without prior notice or reason.</p>
 
-    <p>Instela Ltd. (hereinafter referred to as “Instela”, “we”, “us”, “our” or “ours”) is a company incorporated in England and Wales, with our registered office at 563 CHISWICK HIGH ROAD, London, W4 3AY. Instela provides mobile applications that connect Customers who have Jobs that they want completed with Providers who are willing to undertake those Jobs. Collectively these Jobs are the Services, and the Services may be available through www.Instela.com, other websites and mobile applications.</p>
+    <p>Instela Ltd. (hereinafter referred to as “Instela”, “we”, “us”, “our” or “ours”) is a company incorporated in England and Wales, with our registered office at 563 CHISWICK HIGH ROAD, London, W4 3AY. Instela provides mobile applications that connect Customers who have Jobs that they want completed with Providers who are willing to undertake those Jobs. Collectively these Jobs are the Services, and the Services may be available through www.Instela.co, other websites and mobile applications.</p>
 
     <p>By using Services you are confirming you have read these Terms and Conditions (“Terms”) and agree to be bound by them when you become a registered User of the Services and for as long as you continue to make use of them. These terms govern your access to and use of the Services and constitute a legally binding agreement between you and Instela.</p>
 
@@ -241,11 +241,11 @@
 
     <h3>Cancellation of Your Instela Account</h3>
 
-    <p>You may cancel your Instela account at any time by giving us notice at help@instela.com. Unless otherwise stated herein, all Instela Services will be cancelled within seven (7) days of receipt of notice from you.</p>
+    <p>You may cancel your Instela account at any time by giving us notice at help@instela.co. Unless otherwise stated herein, all Instela Services will be cancelled within seven (7) days of receipt of notice from you.</p>
 
     <h3>Reporting Misconduct</h3>
 
-    <p>If you engage with another User who you feel has acted in an inappropriate way towards you, including but not limited to offensive, violent or sexually inappropriate behaviour you should immediately make a report to the appropriate authorities and then to Instela at help@instela.com quoting the filing report number and location. Your report may cause us to investigate such behaviour but we are not obligated to take action beyond that which is required by law, and we will not incur any additional liability or expense.</p>
+    <p>If you engage with another User who you feel has acted in an inappropriate way towards you, including but not limited to offensive, violent or sexually inappropriate behaviour you should immediately make a report to the appropriate authorities and then to Instela at help@instela.co quoting the filing report number and location. Your report may cause us to investigate such behaviour but we are not obligated to take action beyond that which is required by law, and we will not incur any additional liability or expense.</p>
 
     <!-- <h3>Your Confidential Information</h3>
     <p>Instela Ltd. is registered under the data protection act (with registration number Z3489112) and we respect the confidentiality of the information you give us. We never pass on any information about our Users to third party organisations, unless we are compelled to do so by law.</p>
@@ -256,7 +256,7 @@
 
     <h3>General Conditions</h3>
 
-    <p>Any notice to be given by the User under these Terms may be delivered by email to help@instela.com or by post to Instela’s registered office.</p>
+    <p>Any notice to be given by the User under these Terms may be delivered by email to help@instela.co or by post to Instela’s registered office.</p>
 
     <br>
     <br>
