--- a/app/views/creatives/_services.html.erb
+++ b/app/views/creatives/_services.html.erb
@@ -32,7 +32,7 @@
             </div>
             <div class="col-lg-3 col-md-3 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-magic wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                    <i class="fa fa-4x fa-recycle wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>Corporate Cleaning</h3>
                     <p class="text-muted">Regularly scheduled cleaning needs and stocking supply</p>
                 </div>
