--- a/app/views/creatives/_header.html.erb
+++ b/app/views/creatives/_header.html.erb
@@ -2,7 +2,7 @@
     <div class="header-content">
         <div class"container-fluid">
             <div class="header-content-inner">
-                <h2>ON-DEMAND AND ON-SITE OFFICE SUPPORT</h2>
+                <h2>OFFICE SUPPORT ON DEMAND</h2>
                 <!-- <h2>OFFICE SUPPORT</h2> -->
                 <br>
                 <h1 style="color: #f05f40;"><a style="text-decoration: none;" href="sms:07454574821">07 45 45 74 821</a></h1>
