added icons to other pages and started icon on web tab

--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -12,7 +12,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="/#page-top">Instela</a>
+            <a class="navbar-brand page-scroll" href="/#page-top"><i class="fa fa-1x fa-magic wow bounceIn text-primary"></i> Instela</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
