--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="shortcut icon" href="/assets/images/creative/favicon-magic.ico" type="image/x-icon">
+  <title>Instela</title>
+  <%= favicon_link_tag 'favicon.ico' %>
   <%= display_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <%= stylesheet_link_tag 'creative/manifest.css', media: 'all' %>
