--- a/app/views/creatives/_services.html.erb
+++ b/app/views/creatives/_services.html.erb
@@ -13,7 +13,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-desktop wow bounceIn text-primary"></i>
                     <h3>Tech Support</h3>
-                    <p class="text-muted">WiFi network management, computer troubleshooting, A/V and conference room setup</p>
+                    <p class="text-muted">WiFi network management, computer troubleshooting, Audio/Visual and conference room setup</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-3 text-center">
