changed header text

--- a/app/views/creatives/_header.html.erb
+++ b/app/views/creatives/_header.html.erb
@@ -2,13 +2,12 @@
     <div class="header-content">
         <div class"container-fluid">
             <div class="header-content-inner">
-                <h2>On Demand Services </h2>
-                <h2>To Keep Your Business Running</h2>
+                <h2>Make Everything Work in Your Office</h2>
                 <br>
                 <h1 style="color: #f05f40;"><a style="text-decoration: none;" href="sms:07454574821">07 45 45 74 821</a></h1>
                 <br>
                 <h4>Send an SMS to this number to get started</h4>
-                <h4>Available during weekdays from 8AM until 8PM</h4>
+                <h4>Available on-demand during weekdays from 8AM until 8PM</h4>
                 <hr>
                 <%= link_to 'REGISTER MY DETAILS', new_account_path, class: "btn btn-primary btn-xl page-scroll" %>
             </div>
