--- a/app/views/accounts/_header.html.erb
+++ b/app/views/accounts/_header.html.erb
@@ -33,7 +33,8 @@
                   <br>
                   <div class="row">
                     <div class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4  col-sm-4 col-sm-offset-4 col-xs-4 col-xs-offset-4">
-                    <a href="/pages/terms"><img class="img-responsive" src="http://static1.squarespace.com/static/516c1d38e4b0e454d77848a3/54c90c35e4b07dcbf973a91e/54c90c6ae4b02ed0cc540b7f/1422462100339/Stripe.png"></a>
+                    <%= link_to image_tag("accounts/outline.png", :class => 'img-responsive'), "/pages/terms" %>
+                    <!-- <a href="/pages/terms"><img class="img-responsive" src="../assets/images/accounts/outline.png"></a> -->
                     </div>
                   </div>
                   <br>
