--- a/app/views/accounts/_header.html.erb
+++ b/app/views/accounts/_header.html.erb
@@ -33,7 +33,7 @@
                   <br>
                   <div class="row">
                     <div class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4  col-sm-4 col-sm-offset-4 col-xs-4 col-xs-offset-4">
-                    <a href="https://stripe.com/about"><%= link_to image_tag("accounts/outline.png", :class => 'img-responsive'), "/pages/terms" %></a>
+                    <%= link_to image_tag("accounts/outline.png", :class => 'img-responsive'), "https://stripe.com/about" %>
                     </div>
                   </div>
                   <br>
