changed color favicon and text register form

--- a/app/views/accounts/_header.html.erb
+++ b/app/views/accounts/_header.html.erb
@@ -38,9 +38,10 @@
                     </div>
                   </div>
                   <br>
-                  <p style="text-align: center; color: black; font-family: 'ArialRoundedMTBold'";>
+                  <p style="text-align: center; color: black; font-family: 'ArialRoundedMTBold';font-size: 14px;">We only charge your credit card once a service has been delivered.</p>
+                  <p style="text-align: center; color: black; font-family: 'ArialRoundedMTBold';font-size: 14px;">
                   <!-- <input type="checkbox" required name="terms"> -->
-                  By clicking on 'Add Payment Details':<br> I agree that I read and accepted the <br><a href="/pages/terms">Terms and Conditions</a></p>
+                  By registering your details<br> you agree that you read and accepted the <br><a href="/pages/terms">Terms and Conditions</a></p>
                   <!-- <p><input type="submit"></p> -->
                 <% end %>
             </div>
