--- a/app/views/accounts/_header.html.erb
+++ b/app/views/accounts/_header.html.erb
@@ -6,6 +6,8 @@
                 <h3 style="text-align: center; color: black; font-family: 'ArialRoundedMTBold';">Register my details</h3>
                 <p></p>
                 <%= form_for @account, url: {action: 'create'} do |f| %>
+                  <%= f.error_messages %>
+                
                   <div class="form-group">
                     <%= f.text_field :first_name, :required => true, placeholder: 'First Name', class: 'form-control' %>
                   </div>
