--- a/app/assets/stylesheets/creative/creative.css.scss
+++ b/app/assets/stylesheets/creative/creative.css.scss
@@ -13,13 +13,13 @@ body {
 #video-background {
 /*  making the video fullscreen  */
   position: absolute;
-  display: block;  
-  right: 0; 
+  display: block;
+  right: 0;
   bottom: 0;
-  min-width: 100%; 
+  min-width: 100%;
   min-height: 100%;
-  width: initial;   
-  height: auto;  
+  width: initial;
+  height: auto;
   z-index: -1;
   margin: 0 auto;
   object-fit: cover;
@@ -552,6 +552,10 @@ body {
 .registration_form{
     background-color: white;
     border:2px solid #f05f40;
+}
+
+.key_text {
+    margin-top: 10%;
 }
 
 
